--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="card">
     <div class="title">Викуся,с 8 марта!</div>
     <div class="text" id="text"></div>
-    <div class="author" id="author">- Твой пупсик</div>
+    <div class="author" id="author">- Твой Бодичка &#10084;	</div>
 </div>
 
 
