--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
 
     <meta name="theme-color" content="#ffffff">
-    <title>С 8 марта</title>
+    <title>С 8 марта, Викуся!</title>
 </head>
 <body>
 
@@ -22,7 +22,7 @@
 <div class="card">
     <div class="title">Викуся,с 8 марта!</div>
     <div class="text" id="text"></div>
-    <div class="author" id="author">- Твой пупсик</div>
+    <div class="author" id="author">- Твой Бодичка &#10084;	</div>
 </div>
 
 
